[gd_scene load_steps=3 format=3 uid="uid://c17h8rkwmrlcv"]

[ext_resource type="Script" uid="uid://bplualhgev07o" path="res://game/pokemon/pokemon_sprite.gd" id="1_schas"]
[ext_resource type="Material" uid="uid://bpyjcrywvnupk" path="res://game/pokemon/pokemon_shadow_sprite.tres" id="4_re44s"]

[node name="PokemonSprite" type="Node2D" unique_id=2130735508]
texture_filter = 1
script = ExtResource("1_schas")
metadata/_custom_type_script = "uid://bplualhgev07o"

[node name="OffsetsSprite" type="Sprite2D" parent="." unique_id=923671075]
unique_name_in_owner = true
hframes = 2
vframes = 8
region_rect = Rect2(nan, 0, 64, 64)

[node name="ShadowSprite" type="Sprite2D" parent="." unique_id=160631979]
unique_name_in_owner = true
material = ExtResource("4_re44s")
hframes = 2
vframes = 8
region_rect = Rect2(nan, 0, 64, 64)

[node name="AnimSprite" type="Sprite2D" parent="." unique_id=1665805264]
unique_name_in_owner = true
hframes = 2
vframes = 8
region_rect = Rect2(nan, 0, 64, 64)
